/noad установка, апдейт jenkins, автозагрузка, иные улучшения