@@ -3,11 +3,12 @@
 # Инсталлятор AI Enterprise и его окружения
 # версия 0.1 от 13.04.2020
 
-# проверяем, заполнен ли $AIHOME (например, если скрипт запускался сразу с данного шага, он будет пустым)
+# проверяем, заполнен ли AIHOME
 function Get-AIHome {
 	if ($global:AIHOME -eq $null) {
 		Write-Host 'Пожалуйста, укажите путь до каталога с дистрибутивами AI Enterprise (где находятся каталоги aiv, aie, aic) без \ в конце: ' -ForegroundColor Yellow -NoNewline
 		$global:AIHOME = Read-Host | ForEach-Object {$_.Trim()}
+		# проверяем есть ли в указанном каталоге дистрибутив AI
 		Get-Current-Version-Path "$($global:AIHOME)\aiv" "AIE.Viewer*.exe">$null
 		Get-Current-Version-Path "$($global:AIHOME)\aie" "AIE.Server*.exe">$null
 		Get-Current-Version-Path "$($global:AIHOME)\aic" "AIE.Agent*.exe">$null
@@ -50,20 +51,22 @@ function Check-NetFramework-Version {
 	}
 	else {
 		Write-Host 'Ошибка: Пожалуйста, обновите версию Net Framework до 4.7.2 или выше, а затем перезапустите скрипт.' -ForegroundColor Red
-		Write-Host 'Запускаю установщик обновления Net Framework...' -ForegroundColor Red
+		Write-Host 'Запускаю установщик обновления Net Framework...' -ForegroundColor Yellow
 		start ndp48-x86-x64-allos-enu.exe
 		Exit
 	}
 }
 
-date >> logs\install.log
+
+date | Out-File -Append logs\install.log
 $myFQDN = ((Get-WmiObject win32_computersystem).DNSHostName+"."+(Get-WmiObject win32_computersystem).Domain).ToLower()
+$domain = ((Get-WmiObject win32_computersystem).Domain).ToLower()
 $step = $args[0]
 
 # проверяем что пререквизиты установки выполнены
 if ($step -eq $null) {
 	Write-Host 'Данный скрипт поможет вам установить Application Inspector Enterprise Edition. Если в процессе установки у вас возникнут ошибки, либо придётся перезагрузить компьютер, вы можете продолжить установку с последнего шага, указав номер этого шага в качестве параметра скрипта, например:' -ForegroundColor Yellow
-	Write-Host '.\AI-Install-Wizard.ps1 5' -ForegroundColor Yellow
+	Write-Host '.\AI-Wizard.ps1 5' -ForegroundColor Yellow
 	Write-Host 'Таким образом установка продолжится с шага 5.' -ForegroundColor Yellow
 	Write-Host
 	Write-Host '---ШАГ 1---' -ForegroundColor Green
@@ -76,7 +79,7 @@ if ($step -eq $null) {
 			if ($env:HOMEDRIVE -eq "C:") {
 				# проверяем версию powershell
 				$psver = Get-Host | Select-Object Version
-				$psver.version >> logs\install.log
+				$psver.version | Out-File -Append logs\install.log
 				if ($psver.version.Major -ge 5) {
 					# проверяем версию NetFramework
 					if (Check-NetFramework-Version) {
@@ -85,27 +88,31 @@ if ($step -eq $null) {
 						# копируем утилиты для установки
 						if (-Not (Test-Path C:\TOOLS)) {
 							Write-Host 'Создаю каталог C:\TOOLS и копирую туда необходимые компоненты для установки...' -ForegroundColor Yellow
-							mkdir -p C:\TOOLS\BOOT-INF\classes >>logs\install.log
-							xcopy jdk1.8 C:\TOOLS\jdk1.8\ /E /Y >>logs\install.log
-							xcopy openssl C:\TOOLS\openssl\ /E /Y >>logs\install.log
+							mkdir -p C:\TOOLS\BOOT-INF\classes | Out-File -Append logs\install.log
+							xcopy jdk1.8 C:\TOOLS\jdk1.8\ /E /Y | Out-File -Append logs\install.log
+							xcopy openssl C:\TOOLS\openssl\ /E /Y | Out-File -Append logs\install.log
 							# обновляем Path
 							[Environment]::SetEnvironmentVariable("Path", $env:Path + ";C:\TOOLS\openssl\bin;C:\TOOLS\jdk1.8\bin", "Machine")		
 							# обновляем знания текущей сессии Powershell о Path
 							$env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
-							xcopy certs C:\TOOLS\certs\ /E /Y >>logs\install.log
+							xcopy certs C:\TOOLS\certs\ /E /Y | Out-File -Append logs\install.log
 							copy ptai-integration-service-0.1-spring-boot.jar C:\TOOLS\ptai-integration-service-0.1-spring-boot.jar
 							copy ptai-cli-plugin-0.1-jar-with-dependencies.jar C:\TOOLS\ptai-cli-plugin-0.1.jar
-							copy application.yml "C:\TOOLS\BOOT-INF\classes\application.yml"
-							copy bootstrap.yml "C:\TOOLS\BOOT-INF\classes\bootstrap.yml"
+							copy config\application.yml C:\TOOLS\BOOT-INF\classes\application.yml
+							copy config\bootstrap.yml C:\TOOLS\BOOT-INF\classes\bootstrap.yml
 							copy agent.jar C:\TOOLS\agent.jar
-							[System.IO.File]::WriteAllLines("C:\TOOLS\run-service.bat", "start java -Xmx2g -Xms32m -XX:+UseConcMarkSweepGC -Dspring.main.lazy-initialization=true -Dspring.profiles.active=prod -jar ptai-integration-service-0.1-spring-boot.jar 10")
+							copy plugins\ptai-jenkins-plugin.hpi C:\TOOLS\ptai-jenkins-plugin.hpi
+							copy config\readme.txt C:\TOOLS\readme.txt
+							copy config\run-service.bat C:\TOOLS\run-service.bat
+							# выключаем окно первого запуска IE чтобы работал Invoke-WebRequest
+							Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Internet Explorer\Main" -Name "DisableFirstRunCustomize" -Value 2
 						}
 						$step = 2
 					}
 				}
 				else {
 					Write-Host 'Ошибка: Пожалуйста, обновите версию Powershell до 5-ой или выше, а затем перезапустите скрипт.' -ForegroundColor Red
-					Write-Host 'Запускаю установщик обновления Powershell...' -ForegroundColor Red
+					Write-Host 'Запускаю установщик обновления Powershell...' -ForegroundColor Yellow
 					start powershell_5-1_Win8.1AndW2K12R2-KB3191564-x64.msu
 					Check-NetFramework-Version
 					Exit
@@ -133,25 +140,20 @@ if ($step -eq 2) {
 	# проверяем если AI Viewer уже установлен
 	if ([System.IO.File]::Exists("C:\Program Files (x86)\Positive Technologies\Application Inspector Viewer\ApplicationInspector.exe")) {
 		Write-Host 'Этот шаг уже был выполнен, переходим к следующему.' -ForegroundColor Yellow
-		$step = 3
 	}
 	else {
 		Get-AIHome
-		Write-Host 'Пожалуйста, следуйте указаниям установщика AI Viewer.' -ForegroundColor Yellow
-		start (Get-Current-Version-Path "$($global:AIHOME)\aiv" "AIE.Viewer*.exe")
-		Write-Host 'Нажмите Enter когда установка завершится: ' -ForegroundColor Yellow -NoNewline
-		Read-Host
-		Write-Host 'Нажмите Enter ещё раз если установка AI Viewer завершилась: ' -ForegroundColor Yellow -NoNewline
-		Read-Host
+		Write-Host 'Пожалуйста, следуйте указаниям установщика AI Viewer...' -ForegroundColor Yellow
+		Write-Host 'По завершению установки откажитесь от перезагрузки компьютера, это не обязательно.' -ForegroundColor Yellow
+		$proc = Start-Process (Get-Current-Version-Path "$($global:AIHOME)\aiv" "AIE.Viewer*.exe") -passthru
+		Wait-Process $proc.Id
 		# проверяем что AI Viewer установлен
-		if ([System.IO.File]::Exists("C:\Program Files (x86)\Positive Technologies\Application Inspector Viewer\ApplicationInspector.exe")) {
-			$step = 3
-		}
-		else {
+		if (-Not [System.IO.File]::Exists("C:\Program Files (x86)\Positive Technologies\Application Inspector Viewer\ApplicationInspector.exe")) {
 			Write-Host 'Ошибка: AI Viewer не установлен. Пожалуйста, устраните ошибку и продолжите установку с шага 3.' -ForegroundColor Red
 			Exit
 		}
 	}
+	$step = 3
 }
 
 # генерим самоподписанные сертификаты, устанавливаем сертификаты в хранилище
@@ -160,83 +162,106 @@ if ($step -eq 3) {
 	# проверяем что этот шаг не выполнялся
 	if ([System.IO.File]::Exists("C:\TOOLS\certs\INT\out\01\private.jks")) {
 		Write-Host 'Этот шаг уже был выполнен, переходим к следующему.' -ForegroundColor Yellow
-		$step = 4
 	}
 	else {
 		# проверяем что на машине есть нормальный блокнот
 		if (-Not [System.IO.File]::Exists("C:\Program Files (x86)\Notepad++\notepad++.exe")) {
 			# если нет, то ставим Notepad++ в фоновом режиме
 			Write-Host 'Устанавливаю Notepad++...' -ForegroundColor Yellow
-			start (Get-Current-Version-Path $PSScriptRoot "npp*.exe") /S
-			$timer = 0
-			do {
-				Start-Sleep 1
-				if ([System.IO.File]::Exists("C:\Program Files (x86)\Notepad++\notepad++.exe")) {
-					[bool] $nppoutput = 1
-				}
-				$timer++
-				if ($timer -eq 20) {
-					[bool] $nppoutput = 0
-				}
-			}
-			while ($nppoutput -eq $null)
-			if ($nppoutput) {
-				Write-Host 'Установка Notepad++ завершена.' -ForegroundColor Yellow
-			}
-			else {
+			$proc = Start-Process (Get-Current-Version-Path $PSScriptRoot "npp*.exe") -ArgumentList "/S" -passthru
+			Wait-Process $proc.Id
+			if (-Not [System.IO.File]::Exists("C:\Program Files (x86)\Notepad++\notepad++.exe")) {
 				Write-Host 'Ошибка: Notepad++ не установлен. Пожалуйста, установите его вручную.' -ForegroundColor Red
 			}
 		}
-		Write-Host "На данном шаге будут сгенерированы самоподписанные сертификаты." -ForegroundColor Yellow
 		Write-Host 'Конфигурирую утилиту для выпуска сертификатов...' -ForegroundColor Yellow
-		$yourdomain = (Get-WmiObject win32_computersystem).Domain
-		((Get-Content -path C:\TOOLS\certs\conf\root\ca.conf -Raw) -replace 'test.com',$yourdomain) | Set-Content -Path C:\TOOLS\certs\conf\root\ca.conf
-		((Get-Content -path C:\TOOLS\certs\conf\int\ssl.server.conf -Raw) -replace 'test.com',$yourdomain) | Set-Content -Path C:\TOOLS\certs\conf\int\ssl.server.conf
-		((Get-Content -path C:\TOOLS\certs\conf\int\ca.conf -Raw) -replace 'test.com',$yourdomain) | Set-Content -Path C:\TOOLS\certs\conf\int\ca.conf
-		((Get-Content -path C:\TOOLS\certs\conf\int\ssl.client.conf -Raw) -replace 'test.com',$yourdomain) | Set-Content -Path C:\TOOLS\certs\conf\int\ssl.client.conf
-		Write-Host 'Запускаю процедуру генерации сертификатов...' -ForegroundColor Yellow
+		((Get-Content -path C:\TOOLS\certs\conf\root\ca.conf -Raw) -replace 'test.com',$domain) | Set-Content -Path C:\TOOLS\certs\conf\root\ca.conf
+		((Get-Content -path C:\TOOLS\certs\conf\int\ssl.server.conf -Raw) -replace 'test.com',$domain) | Set-Content -Path C:\TOOLS\certs\conf\int\ssl.server.conf
+		((Get-Content -path C:\TOOLS\certs\conf\int\ca.conf -Raw) -replace 'test.com',$domain) | Set-Content -Path C:\TOOLS\certs\conf\int\ca.conf
+		((Get-Content -path C:\TOOLS\certs\conf\int\ssl.client.conf -Raw) -replace 'test.com',$domain) | Set-Content -Path C:\TOOLS\certs\conf\int\ssl.client.conf
+		Write-Host 'Запускаю процедуру генерации самоподписанных сертификатов...' -ForegroundColor Yellow
 		Set-Location -Path C:\TOOLS\certs\src
-		Invoke-expression -Command C:\TOOLS\certs\src\ROOT.ps1 2>&1>$null
+		Invoke-expression -Command C:\TOOLS\certs\src\ROOT.ps1 2>&1 | Out-File -Append "C:\TOOLS\certs\install.log"
 		Set-Location -Path $PSScriptRoot
-		# проверяем что сертификат появился
+		# проверяем что сертификаты сгенерировались
 		if ([System.IO.File]::Exists("C:\TOOLS\certs\INT\out\01\private.jks")) {
 			# добавляем серты в cacerts java
-			keytool -importkeystore -noprompt -srckeystore C:\TOOLS\certs\INT\out\01\private.jks -srcstorepass P@ssw0rd -destkeystore C:\TOOLS\jdk1.8\jre\lib\security\cacerts -deststorepass changeit 2>&1>$null	
+			keytool -importkeystore -noprompt -srckeystore C:\TOOLS\certs\INT\out\01\private.jks -srcstorepass P@ssw0rd -destkeystore C:\TOOLS\jdk1.8\jre\lib\security\cacerts -deststorepass changeit 2>&1 | Out-File -Append "C:\TOOLS\certs\install.log"
+			copy C:\TOOLS\certs\INT\out\01\ca.chain.pem.crt C:\TOOLS\server-cert.txt
 			Write-Host 'Сертификаты были сгенерированы успешно и сохранены в C:\TOOLS\certs\INT\out. Пароль: P@ssw0rd' -ForegroundColor Yellow
 			Write-Host 'Импортирую сертификаты в хранилище Windows...' -ForegroundColor Yellow
-			Import-Certificate -FilePath "C:\TOOLS\certs\ROOT\certs\RootCA.pem.crt" -CertStoreLocation Cert:\LocalMachine\Root | Out-Null
-			Import-Certificate -FilePath "C:\TOOLS\certs\INT\certs\IntermediateCA.pem.crt" -CertStoreLocation Cert:\LocalMachine\CA | Out-Null
-			$step = 4
+			Import-Certificate -FilePath "C:\TOOLS\certs\ROOT\certs\RootCA.pem.crt" -CertStoreLocation Cert:\LocalMachine\Root | Out-File -Append logs\install.log
+			Import-Certificate -FilePath "C:\TOOLS\certs\INT\certs\IntermediateCA.pem.crt" -CertStoreLocation Cert:\LocalMachine\CA | Out-File -Append logs\install.log
 		}
 		else {
-			Write-Host 'Ошибка: Сертификаты не созданы.' -ForegroundColor Red
+			Write-Host 'Ошибка: Сертификаты не созданы. Логи записаны в C:\TOOLS\certs\install.log. Пожалуйста, устраните ошибку и перезапустите установку с шага 3.' -ForegroundColor Red
 			Exit
 		}
 	}
+	$step = 4
 }
 
 # устанавливаем AI Server
 if ($step -eq 4) {
-	# TODO тест домена с adtool.exe и установка /noad
 	Write-Host '---ШАГ 4---' -ForegroundColor Green
 	# проверяем если AI Server уже установлен
 	if (-Not [System.IO.File]::Exists("C:\Program Files (x86)\Positive Technologies\Application Inspector Server\Services\gateway\AIE.Gateway.exe")) {
 		Get-AIHome
+		# проверяем наличие пользователя в домене
+		do {
+			Write-Host "Проверяю связь с домен контроллером..." -ForegroundColor Yellow
+			if ($matches -ne $null) {
+				$domain = $matches[0]
+			}
+			if ((.\ADTool.exe $domain $env:UserName) -like "Success, all users were found") {
+				[bool] $domainfound = 1
+				break
+			}
+		}
+		# если не нашли в текущем домене, сокращаем название домена до следующей точки и пробуем снова
+		while ($domain -match '(?<=\.).*')
+		
 		Write-Host 'Пожалуйста, следуйте указаниям установщика AI Server.' -ForegroundColor Yellow
 		Write-Host 'Данные для установки: ' -ForegroundColor Yellow
+		if ($domainfound -and $domain -ne ((Get-WmiObject win32_computersystem).Domain).ToLower()) {
+			Write-Host "Важно: при установке укажите, пожалуйста, домен в таком виде: $($domain)" -ForegroundColor Cyan
+		}
+		else {
+			Write-Host "Домен: "((Get-WmiObject win32_computersystem).Domain).ToLower() -ForegroundColor Yellow
+		}
 		Write-Host 'Расположение сертификата: C:\TOOLS\certs\INT\out\00\ssl.server.brief.pfx' -ForegroundColor Yellow
 		Write-Host 'Пароль от сертификата: P@ssw0rd' -ForegroundColor Yellow
-		start (Get-Current-Version-Path "$($global:AIHOME)\aie" "AIE.Server*.exe")
-		Write-Host 'Нажмите Enter когда установка завершится: ' -ForegroundColor Yellow -NoNewline
-		Read-Host
-		Write-Host 'Нажмите Enter ещё раз если установка AI Server завершилась: ' -ForegroundColor Yellow -NoNewline
-		Read-Host
+		if ($domainfound) {
+			$proc = Start-Process (Get-Current-Version-Path "$($global:AIHOME)\aie" "AIE.Server*.exe") -passthru
+		}
+		# производим установку с флагом /noad если не смогли найти домен
+		else {
+			Write-Host "Предупреждение: домен не найден, провожу установку с флагом /noad. После установки вам будет предложено добавить пользователя в базу данных." -ForegroundColor Cyan
+			$proc = Start-Process (Get-Current-Version-Path "$($global:AIHOME)\aie" "AIE.Server*.exe") -ArgumentList "/noad" -passthru
+		}
+		Wait-Process $proc.Id
 		# проверяем что AI Server установлен
 		if (-Not [System.IO.File]::Exists("C:\Program Files (x86)\Positive Technologies\Application Inspector Server\Services\gateway\AIE.Gateway.exe")) {
-			Write-Host 'Ошибка: AI Server не установлен. Логи скопированы в папку logs.' -ForegroundColor Red
-			# TODO: как падает xcopy если нет каталога?
-			xcopy "C:\ProgramData\Application Inspector\Logs\deploy" logs\deploy\ /E /Y >>logs\install.log
+			Write-Host 'Ошибка: AI Server не установлен. Логи скопированы в папку logs. Пожалуйста, устраните ошибку и продолжите установку с шага 5.' -ForegroundColor Red
+			xcopy "C:\ProgramData\Application Inspector\Logs\deploy" logs\deploy\ /E /Y | Out-File -Append logs\install.log
 			Exit
+		}
+		# если домен не обнаружен, добавляем текущего пользователя в качестве админа через базу данных
+		if (-Not $domainfound) {
+			Write-Host 'Устанавливаю ODBC драйвер для Postgres...' -ForegroundColor Yellow
+			$proc = Start-Process msiexec -ArgumentList "/i $(Get-Current-Version-Path $PSScriptRoot "psqlodbc*.msi") /quiet /l*v `"$($PSScriptRoot)\logs\psqlodbc.log`"" -passthru
+			Wait-Process $proc.Id
+			Write-Host "Для добавления текущего пользователя в базу данных, пожалуйста, укажите пароль от Postgres, который вы задали при установке: " -ForegroundColor Yellow -NoNewLine
+			$DBPass = Read-Host
+			$DBConn = New-Object System.Data.Odbc.OdbcConnection
+			$DBConn.ConnectionString = "Driver={PostgreSQL UNICODE(x64)};Server=$myFQDN;Port=5432;Database=ai_csi;Uid=postgres;Pwd=$DBPass;"
+			$DBConn.Open()
+			$DBCmdup = $DBConn.CreateCommand()
+			$cmd = (whoami /user)
+			$sid = ([regex]"S[\d\-]{1,}").Matches($cmd)[0].Value
+			$DBCmdup.CommandText = "UPDATE `"GlobalMemberEntity`" SET `"Sid`" = '$sid' WHERE `"Id`" = 1"
+			$DBCmdup.ExecuteReader()
+			$DBConn.Close()
 		}
 	}
 	# проверяем наличие служб
@@ -246,7 +271,7 @@ if ($step -eq 4) {
 	catch {
 		Write-Host 'Ошибка проверки служб:'$_ -ForegroundColor Red
 		Write-Host 'Логи скопированы в папку logs. Пожалуйста, устраните ошибку и продолжите установку с шага 5.' -ForegroundColor Red
-		xcopy "C:\ProgramData\Application Inspector\Logs\deploy" logs\deploy\ /E /Y >>logs\install.log	
+		xcopy "C:\ProgramData\Application Inspector\Logs\deploy" logs\deploy\ /E /Y | Out-File -Append logs\install.log	
 		Exit
 	}
 	# проверяем статус служб
@@ -258,34 +283,34 @@ if ($step -eq 4) {
 	}
 	# если есть не запустившиеся службы, копируем логи их падения в папку logs
 	if ($ServiceDownList.Count -gt 0) {
-		Write-Host 'Ошибка: AI Server установлен, но некоторые службы не смогли запуститься. Логи скопированы в папку logs. Пожалуйста устраните ошибку и продолжите установку с шага 5.' -ForegroundColor Red
-		for ($i=0; $i -lt $ServiceDownList.Length; $i++) {
+		Write-Host 'Ошибка: AI Server установлен, но некоторые службы не смогли запуститься. Логи скопированы в папку logs. Пожалуйста, устраните ошибку и продолжите установку с шага 5.' -ForegroundColor Red
+		for ($i=0; $i -lt $ServiceDownList.Count; $i++) {
 			switch ($ServiceDownList[$i]) {
-				"AI.DescriptionsService" 				{ xcopy "C:\ProgramData\Application Inspector\Logs\descriptionsService" logs\descriptionsService\ /E /Y >>logs\install.log }
-				"AI.Enterprise.AuthService" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\authService" logs\authService\ /E /Y >>logs\install.log }
-				"AI.Enterprise.ChangeHistory" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\changeHistoryService" logs\changeHistoryService\ /E /Y >>logs\install.log }
-				"AI.Enterprise.FileContent.API" 		{ xcopy "C:\ProgramData\Application Inspector\Logs\filesStore" logs\filesStore\ /E /Y >>logs\install.log }
-				"AI.Enterprise.Gateway" 				{ xcopy "C:\ProgramData\Application Inspector\Logs\gateway" logs\gateway\ /E /Y >>logs\install.log }
-				"AI.Enterprise.IssueTracker" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\issueTracker" logs\issueTracker\ /E /Y >>logs\install.log }
-				"AI.Enterprise.NotificationsService" 	{ xcopy "C:\ProgramData\Application Inspector\Logs\notificationsService" logs\notificationsService\ /E /Y >>logs\install.log }
-				"AI.Enterprise.Projects.API" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\projectManagement" logs\projectManagement\ /E /Y >>logs\install.log }
-				"AI.Enterprise.SettingsProvider.API" 	{ xcopy "C:\ProgramData\Application Inspector\Logs\settingsProvider" logs\settingsProvider\ /E /Y >>logs\install.log }
-				"AI.Enterprise.SystemManagement" 		{ xcopy "C:\ProgramData\Application Inspector\Logs\systemManagement" logs\systemManagement\ /E /Y >>logs\install.log }
-				"AI.Enterprise.UI" 						{ xcopy "C:\ProgramData\Application Inspector\Logs\uiApi" logs\uiApi\ /E /Y >>logs\install.log }
-				"AI.Enterprise.UpdateServer" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\updateServer" logs\updateServer\ /E /Y >>logs\install.log }
-				"Consul" 								{ xcopy "C:\ProgramData\Application Inspector\Logs\consul" logs\consul\ /E /Y >>logs\install.log;
-														xcopy "C:\ProgramData\Application Inspector\Logs\consulTool" logs\consulTool\ /E /Y >>logs\install.log }
-				"RabbitMQ" 								{ xcopy $env:APPDATA\RabbitMQ\log logs\RabbitMQ\ /E /Y >>logs\install.log }
+				"AI.DescriptionsService" 				{ xcopy "C:\ProgramData\Application Inspector\Logs\descriptionsService" logs\descriptionsService\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.AuthService" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\authService" logs\authService\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.ChangeHistory" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\changeHistoryService" logs\changeHistoryService\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.FileContent.API" 		{ xcopy "C:\ProgramData\Application Inspector\Logs\filesStore" logs\filesStore\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.Gateway" 				{ xcopy "C:\ProgramData\Application Inspector\Logs\gateway" logs\gateway\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.IssueTracker" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\issueTracker" logs\issueTracker\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.NotificationsService" 	{ xcopy "C:\ProgramData\Application Inspector\Logs\notificationsService" logs\notificationsService\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.Projects.API" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\projectManagement" logs\projectManagement\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.SettingsProvider.API" 	{ xcopy "C:\ProgramData\Application Inspector\Logs\settingsProvider" logs\settingsProvider\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.SystemManagement" 		{ xcopy "C:\ProgramData\Application Inspector\Logs\systemManagement" logs\systemManagement\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.UI" 						{ xcopy "C:\ProgramData\Application Inspector\Logs\uiApi" logs\uiApi\ /E /Y | Out-File -Append logs\install.log }
+				"AI.Enterprise.UpdateServer" 			{ xcopy "C:\ProgramData\Application Inspector\Logs\updateServer" logs\updateServer\ /E /Y | Out-File -Append logs\install.log }
+				"Consul" 								{ xcopy "C:\ProgramData\Application Inspector\Logs\consul" logs\consul\ /E /Y | Out-File -Append logs\install.log;
+														xcopy "C:\ProgramData\Application Inspector\Logs\consulTool" logs\consulTool\ /E /Y | Out-File -Append logs\install.log }
+				"RabbitMQ" 								{ xcopy $env:APPDATA\RabbitMQ\log logs\RabbitMQ\ /E /Y | Out-File -Append logs\install.log }
 				"PostgreSQL" 							{ mkdir logs\PostgreSQL; echo $null > logs\PostgreSQL\error.txt }
 			}
 		}
 		# также проверяем юзеров в кролике т.к. часто проблемы связаны с ним
-		& "C:\Program Files\RabbitMQ Server\rabbitmq_server-3.7.8\sbin\rabbitmqctl.bat" list_users 2>&1 | Out-File -FilePath "logs\install.log"
+		& "C:\Program Files\RabbitMQ Server\rabbitmq_server-3.7.8\sbin\rabbitmqctl.bat" list_users 2>&1 | Out-File -Append "logs\install.log"
 		Exit
 	}
 	$AIViewerState = Get-Process ApplicationInspector -ErrorAction SilentlyContinue
-	if ($AIViewerState) {
-		start "C:\Program Files (x86)\Positive Technologies\Application Inspector Viewer\ApplicationInspector.exe"
+	if ($AIViewerState -eq $null) {
+		Start-Process "C:\Program Files (x86)\Positive Technologies\Application Inspector Viewer\ApplicationInspector.exe"
 	}
 	Write-Host 'Подключитесь к серверу с помощью AI Viewer, сгенерируйте фингерпринт на вкладке "О программе" и передайте его сотруднику Positive Technologies для дальнейшей активации лицензии.' -ForegroundColor Yellow
 	Write-Host "Адрес сервера: https://$($myFQDN)" -ForegroundColor Yellow
@@ -306,11 +331,8 @@ if ($step -eq 5) {
 		Write-Host 'Расположение сертификата: C:\TOOLS\certs\INT\out\01\ssl.client.brief.pfx' -ForegroundColor Yellow
 		Write-Host 'Пароль от сертификата: P@ssw0rd' -ForegroundColor Yellow
 		Write-Host "Адрес сервера: https://$($myFQDN)" -ForegroundColor Yellow
-		start (Get-Current-Version-Path "$($global:AIHOME)\aic" "AIE.Agent*.exe")
-		Write-Host 'Нажмите Enter когда установка завершится: ' -ForegroundColor Yellow -NoNewline
-		Read-Host
-		Write-Host 'Нажмите Enter ещё раз если установка AI Agent завершилась: ' -ForegroundColor Yellow -NoNewline
-		Read-Host
+		$proc = Start-Process (Get-Current-Version-Path "$($global:AIHOME)\aic" "AIE.Agent*.exe") -passthru
+		Wait-Process $proc.Id
 		# проверяем что AI Agent установлен
 		if (-Not [System.IO.File]::Exists("C:\Program Files (x86)\Positive Technologies\Application Inspector Agent\aic.exe")) {
 			Write-Host 'Ошибка: AI Agent не установлен. Пожалуйста, выполните установку AI Agent и продолжите установку с шага 6.' -ForegroundColor Red
@@ -324,12 +346,12 @@ if ($step -eq 5) {
 if ($step -eq 6) {
 	Write-Host '---ШАГ 6---' -ForegroundColor Green
 	# проверяем что этот шаг уже запускался
-	if ([System.IO.File]::Exists("C:\TOOLS\consulpatch.txt")) {
+	if ([System.IO.File]::Exists("C:\TOOLS\consultoken.txt")) {
 		Write-Host 'Этот шаг уже был выполнен, переходим к следующему.' -ForegroundColor Yellow
 	}
 	else {
 		Write-Host 'Прописываю настройки интеграционного сервиса в Consul...' -ForegroundColor Yellow
-		Invoke-expression -Command $PSScriptRoot\integrationServiceConsulPatch.ps1
+		Invoke-expression -Command $PSScriptRoot\integrationServiceConsulPatch.ps1 -ErrorAction Stop
 	}
 	$step = 7
 }
@@ -346,138 +368,72 @@ if ($step -eq 7) {
 		# если нет браузера, ставим Chrome в фоновом режиме		
 		if ($global:browserPath -eq $null) {
 			Write-Host 'Устанавливаю Google Chrome...' -ForegroundColor Yellow
-			msiexec /i (Get-Current-Version-Path $PSScriptRoot "google*.msi") /quiet /l*v "$($PSScriptRoot)\logs\chrome.log"
-			$timer = 0
-			do {
-				Start-Sleep 1
-				$timer++				
-				$FFstatus = Get-Content "$($PSScriptRoot)\logs\chrome.log"
-				if ($FFstatus | Select-String "Installation failed") {
-					[bool] $FFoutput = 0
-				}
-				if ($FFstatus | Select-String "Installation completed successfully") {
-					[bool] $FFoutput = 1
-				}
-				elseif ($timer -eq 50) {
-					[bool] $FFoutput = 0
-				}
-			}
-			while ($FFoutput -eq $null)
-			if ($FFoutput) {
-				Write-Host 'Установка Google Chrome завершена.' -ForegroundColor Yellow
-			}
-			else {
+			$proc = Start-Process msiexec -ArgumentList "/i $(Get-Current-Version-Path $PSScriptRoot "google*.msi") /quiet /l*v `"$($PSScriptRoot)\logs\chrome.log`"" -passthru
+			Wait-Process $proc.Id
+			[bool] $Chromestatus = Get-Content "$($PSScriptRoot)\logs\chrome.log" | Select-String "Installation failed"
+			if ($Chromestatus) {
 				Write-Host 'Ошибка: Google Chrome не установлен, логи скопированы в папку logs. Пожалуйста, установите его вручную.' -ForegroundColor Red
 			}
 		}
 		# Ставим Jenkins в фоновом режиме
 		Write-Host 'Устанавливаю Jenkins...' -ForegroundColor Yellow
-		msiexec /i (Get-Current-Version-Path $PSScriptRoot "jenkins*.msi") /quiet /l*v "$($PSScriptRoot)\logs\jenkins.log"
-		$timer = 0
-		do {
-			Start-Sleep 1
-			$timer++
-			$Jstatus = Get-Content "$($PSScriptRoot)\logs\jenkins.log"
-			if ($Jstatus | Select-String "Installation failed") {
-				[bool] $Joutput = 0
-			}
-			if ($Jstatus | Select-String "Installation completed successfully") {
-				[bool] $Joutput = 1
-			}
-			elseif ($timer -eq 40) {
-				[bool] $Joutput = 0
-			}
-		}
-		while ($Joutput -eq $null)
-		if ($Joutput) {
-			Start-Sleep 10
-			Write-Host 'Установка Jenkins завершена.' -ForegroundColor Yellow
-		}
-		else {
-			Write-Host 'Ошибка: Jenkins не установлен, логи скопированы в папку logs. Пожалуйста, устраните ошибку и продолжите установку с шага 8.' -ForegroundColor Red
+		$proc = Start-Process msiexec -ArgumentList "/i $(Get-Current-Version-Path $PSScriptRoot "jenkins*.msi") /quiet /l*v `"$($PSScriptRoot)\logs\jenkins.log`"" -passthru
+		Wait-Process $proc.Id
+		[bool] $Jstatus = Get-Content "$($PSScriptRoot)\logs\jenkins.log" | Select-String "Installation failed"
+		if ($Jstatus) {
+			Write-Host 'Ошибка: Jenkins не установлен, логи скопированы в папку logs. Пожалуйста, установите его вручную и продолжите установку с шага 8.' -ForegroundColor Red
 			Exit
 		}
 	}
 	# проверяем состояние службы Jenkins
 	try {
-		$JenkinsServiceStatus = Get-Service Jenkins -ErrorAction Stop
+		$JenkinsService = Get-Service Jenkins -ErrorAction Stop
 	}
 	catch {
 		Write-Host 'Ошибка проверки службы Jenkins:'$_ -ForegroundColor Red
-		Write-Host 'Пожалуйста устраните ошибку и продолжите установку с шага 8.' -ForegroundColor Red
+		Write-Host 'Пожалуйста, устраните ошибку и продолжите установку с шага 8.' -ForegroundColor Red
 		Exit
 	}
-	if ($JenkinsServiceStatus.Status -eq 'Running') {
-		$step = 8
-	} else {
-		Write-Host 'Ошибка: Служба Jenkins не запущена. Логи скопированы в папку logs. Пожалуйста устраните ошибку и продолжите установку с шага 8.' -ForegroundColor Red
-		xcopy "C:\Program Files (x86)\Jenkins\jenkins.err.log" logs\jenkins.err.log /Y >>logs\install.log					
-		# TODO: заменить Exit на do-while
-		Exit
+	if ($JenkinsService.Status -ne 'Running') {
+		do {
+			xcopy "C:\Program Files (x86)\Jenkins\jenkins.err.log" logs\jenkins.err.log /Y | Out-File -Append logs\install.log		
+			Write-Host 'Ошибка: Служба Jenkins не запущена. Логи скопированы в папку logs. Пожалуйста, поднимите службу Jenkins и нажмите Enter для продолжения установки: ' -ForegroundColor Red -NoNewline
+			Read-Host
+			$JenkinsService = Get-Service Jenkins -ErrorAction SilentlyContinue
+		}
+		while ($JenkinsService.Status -ne 'Running')
 	}
+	$step = 8
 }
 
 # конфигурируем Jenkins
 if ($step -eq 8) {
 	Write-Host '---ШАГ 8---' -ForegroundColor Green
 	# проверяем что плагины Jenkins уже установлены
-	if ([System.IO.File]::Exists("C:\Program Files (x86)\Jenkins\plugins\ptai-jenkins-plugin.hpi")) {
+	if ([System.IO.File]::Exists("C:\TOOLS\jenkinstoken.txt")) {
 		Write-Host 'Этот шаг уже был выполнен, переходим к следующему.' -ForegroundColor Yellow
-		$step = 9
 	}
 	else {
 		Write-Host 'Настраиваю Jenkins...' -ForegroundColor Yellow 
 		Write-Host 'Копирую плагины...' -ForegroundColor Yellow
-		xcopy plugins\other-plugins "C:\Program Files (x86)\Jenkins\plugins\" /E /Y >>logs\install.log
-		xcopy plugins\ptai-jenkins-with-dependencies "C:\Program Files (x86)\Jenkins\plugins\" /E /Y >>logs\install.log
-		# TODO: проблемы с зависимостью Trilead, требует обновления jenkins
-		#xcopy plugins\svn-plugin-with-dependencies "C:\Program Files (x86)\Jenkins\plugins\" /E /Y >>logs\install.log
-		Invoke-expression -Command $PSScriptRoot\configureJenkins.ps1
-		$step = 9
-	}
-}
-
-# устанавливаем Git
-if ($step -eq 9) {
-	Write-Host '---ШАГ 9---' -ForegroundColor Green
-	# проверяем что Git уже установлен
-	if ([System.IO.File]::Exists("C:\Program Files\Git\cmd\git.exe")) {
-		Write-Host 'Этот шаг уже был выполнен, переходим к следующему.' -ForegroundColor Yellow
-		$step = 10
-	}
-	else {
-		Write-Host 'Если вы хотите использовать внутренний Jenkins для запуска сканирования и в качестве источника будет git-репозиторий вашей организации, требуется установить Git for Windows.' -ForegroundColor Yellow
-		Write-Host 'Установить Git for Windows? (y/n): ' -ForegroundColor Yellow -NoNewline
-		$choice = Read-Host
-		if ($choice -eq 'n') {
-			$step = 10
-		}
-		else {
-			Write-Host 'Устанавливаю Git...' -ForegroundColor Yellow	
-			start (Get-Current-Version-Path $PSScriptRoot "Git*.exe") /VERYSILENT
-			Start-Sleep 30
-			# проверяем что Git установлен
-			if ([System.IO.File]::Exists("C:\Program Files\Git\etc\gitconfig")) {
-				Write-Host 'Обновляю конфигурацию Git...' -ForegroundColor Yellow
-				copy gitconfig "C:\Program Files\Git\etc\gitconfig" >>logs\install.log
-			}
-			else {
-				Write-Host 'Ошибка: Git не установлен. Пожалуйста, установите его вручную.' -ForegroundColor Red
-			}
-			$step = 10
+		xcopy plugins "C:\Program Files (x86)\Jenkins\plugins\" /E /Y | Out-File -Append logs\install.log
+		Invoke-expression -Command $PSScriptRoot\configureJenkins.ps1 -ErrorAction Stop
+		if (-Not [System.IO.File]::Exists("C:\TOOLS\jenkinstoken.txt")) {
+			Write-Host 'Ошибка: токен для доступа к Jenkins не сформирован. Пожалуйста, устраните ошибку и перезапустите установку с шага 8.' -ForegroundColor Red
+			Exit
 		}
 	}
+	$step = 9
 }
 
 # конфигурируем интеграционный сервис
-if ($step -eq 10) {
-	Write-Host '---ШАГ 10---' -ForegroundColor Green
+if ($step -eq 9) {
+	Write-Host '---ШАГ 9---' -ForegroundColor Green
 	Write-Host 'Патчу интеграционный сервис...' -ForegroundColor Yellow
 	Set-Location -Path C:\TOOLS
 	# подчищаем временные файлы на случай если раньше этот шаг уже запускался
 	Get-ChildItem -Path 'C:\TOOLS' *.tmp | foreach { Remove-Item -Path $_.FullName }
-	jar uf ptai-integration-service-0.1-spring-boot.jar BOOT-INF\classes\bootstrap.yml
-	jar uf ptai-integration-service-0.1-spring-boot.jar BOOT-INF\classes\application.yml
+	jar uf ptai-integration-service-0.1-spring-boot.jar BOOT-INF\classes\
 	Write-Host 'Запускаю интеграционный сервис...' -ForegroundColor Yellow
 	start C:\TOOLS\run-service.bat
 	$timer = 0
@@ -492,33 +448,60 @@ if ($step -eq 10) {
 		}
 	}
 	while ($pluginoutput -eq $null)
-	if ($pluginoutput) {
-		Write-Host 'Интеграционный сервис запущен.' -ForegroundColor Yellow
-		$step = 11
+	if (-Not $pluginoutput) {
+		Write-Host 'Интеграционный сервис не смог запуститься. Пожалуйста, исправьте ошибку и запустите его вручную (C:\TOOLS\run-service.bat), после чего продолжите установку с шага 10.' -ForegroundColor Red
+		Exit
 	}
-	else {
-		Write-Host 'Интеграционный сервис не смог запуститься. Пожалуйста, запустите его вручную: C:\TOOLS\run-service.bat.' -ForegroundColor Red
-	}
+	$step = 10
 }
 
 # Продолжаем патчить Jenkins
-if ($step -eq 11) {
-	Write-Host '---ШАГ 11---' -ForegroundColor Green
+if ($step -eq 10) {
+	Write-Host '---ШАГ 10---' -ForegroundColor Green
 	Write-Host 'Продолжаю настройку Jenkins...' -ForegroundColor Yellow 
-	Invoke-expression -Command "$($PSScriptRoot)\configureJenkins.ps1 2"
-	Write-Host 'Запускаю агента Jenkins...' -ForegroundColor Yellow 	
+	Invoke-expression -Command "$($PSScriptRoot)\configureJenkins.ps1 2" -ErrorAction Stop
+	if (-Not [System.IO.File]::Exists("C:\TOOLS\run-agent.bat")) {
+		Write-Host 'Ошибка: данные для запуска агента Jenkins не найдены.' -ForegroundColor Red
+		Exit
+	}
+	Write-Host 'Запускаю агента Jenkins...' -ForegroundColor Yellow	
 	start C:\TOOLS\run-agent.bat
+	# заменяем ключевые значения в readme.txt
+	$adminpwd = Get-Content -Path "C:\TOOLS\admin"
+	$readme = Get-Content -Path C:\TOOLS\readme.txt | Out-String
+	$readme = $readme -ireplace '%myFQDN%',"$myFQDN"
+	$readme -ireplace '%adminpwd%',"$adminpwd" | Set-Content -Path C:\TOOLS\readme.txt
 	# подчищаем временные файлы
 	Get-ChildItem -Path 'C:\TOOLS' *.tmp | foreach { Remove-Item -Path $_.FullName }
-	Set-Location -Path $PSScriptRoot
-	Write-Host
-	Write-Host 'Установка завершена успешно!' -ForegroundColor Yellow
-	Write-Host 'Чтобы встроить Application Inspector в вашу систему сборки кода, добавьте шаг сборки "вызов комадной строки" и воспользуйтесь плагином ptai-cli-plugin-0.1.jar. Пример строки запуска: ' -ForegroundColor Yellow
-	$adminpwd = Get-Content -Path "C:\TOOLS\admin"
-	Write-Host "java -jar ptai-cli-plugin-0.1.jar --folder 'workspacefolder' --node PTAI --project 'YourProject' --username 'admin' --token $($adminpwd) --url https://$($myFQDN):8443" -ForegroundColor Green
-	Write-Host 'Полный список доступных параметров плагина можно получить, если запустить jar без параметров: java -jar ptai-cli-plugin-0.1.jar' -ForegroundColor Yellow
-	Write-Host 'Примечание: для Jenkins указать параметр folder пустым: --folder ""' -ForegroundColor Yellow
-	Write-Host 'Для TeamCity: --folder "%system.teamcity.build.workingDir%"' -ForegroundColor Yellow
-	#TODO изучить интеграцию с гитлаб
-	#Write-Host 'Для GitLab: --folder ""'
+	# добавляем каталогу права на запись для пользователей чтобы не было проблем при ручном запуске скриптов
+	$ACL = Get-Acl "C:\TOOLS"
+	$ACL.AddAccessRule((New-Object System.Security.AccessControl.FileSystemAccessRule([System.Security.Principal.NTAccount]"users","fullcontrol", "ContainerInherit, ObjectInherit", "None", "Allow")))
+	Set-Acl "C:\TOOLS" $ACL
+	# помещаем ссылки на скрипт в автозапуск текущего пользователя
+	Write-Host 'Добавляю символические ссылки в автозапуск системы...' -ForegroundColor Yellow
+	New-Item -Path $env:APPDATA"\Microsoft\Windows\Start Menu\Programs\Startup\run-service.bat" -ItemType SymbolicLink -Value C:\TOOLS\run-service.bat | Out-File -Append logs\install.log
+	New-Item -Path $env:APPDATA"\Microsoft\Windows\Start Menu\Programs\Startup\run-agent.bat" -ItemType SymbolicLink -Value C:\TOOLS\run-agent.bat | Out-File -Append logs\install.log
+	Write-Host 'Установка завершена успешно!' -ForegroundColor Cyan
+	Write-Host 'Инструкции по встраиванию Application Inspector в систему сборки кода см. в файле C:\TOOLS\readme.txt.' -ForegroundColor Cyan
+	start notepad++ C:\TOOLS\readme.txt
+	
+	# устанавливаем Git
+	if (-Not [System.IO.File]::Exists("C:\Program Files\Git\cmd\git.exe")) {
+		Write-Host 'Если вы хотите использовать внутренний Jenkins для запуска сканирования и в качестве источника будет git-репозиторий вашей организации, требуется установить Git for Windows.' -ForegroundColor Yellow
+		Write-Host 'Установить Git for Windows? (y/n): ' -ForegroundColor Yellow -NoNewline
+		$choice = Read-Host
+		if ($choice -eq 'y') {
+			Write-Host 'Устанавливаю Git...' -ForegroundColor Yellow
+			$proc = Start-Process (Get-Current-Version-Path $PSScriptRoot "Git*.exe") -ArgumentList "/VERYSILENT" -passthru
+			Wait-Process $proc.Id
+			if ([System.IO.File]::Exists("C:\Program Files\Git\etc\gitconfig")) {
+				Write-Host 'Обновляю конфигурацию Git...' -ForegroundColor Yellow
+				copy config\gitconfig "C:\Program Files\Git\etc\gitconfig" | Out-File -Append logs\install.log
+				Write-Host 'Установка Git завершена.' -ForegroundColor Yellow				
+			}
+			else {
+				Write-Host 'Ошибка: Git не установлен. Пожалуйста, установите его вручную.' -ForegroundColor Red
+			}
+		}
+	}
 }
